# Gallery

./: .eslintignore  .eslintrc.json  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  .prettierrc.json  LICENCE  index.html  jsconfig.json  package-lock.json  package.json  readme.md  vite.config.ts
.github/workflows/: release.yml
src-mithril/: index.js  index.scss  utility.js
src-mithril/component/: list.jsx  media.jsx  navigation.jsx
src-mithril/component/__tests__/: button.spec.js  component.spec.js  galery.single.spec.js  layout.spec.js  navbar.spec.js  navigation.component.spec.js  navigation.object.spec.js  pagination.component.spec.js  pagination.object.spec.js  select.spec.js  test-setup.js  thumbnail.spec.js  tooltip.spec.js
src-mithril/component/button/: button.js  button.scss
src-mithril/component/galery/: all.jsx  index.scss  single.jsx
src-mithril/component/header/: header.jsx  header.scss
src-mithril/component/layout/: layout.js  layout.scss
src-mithril/component/modal/: modal.jsx
src-mithril/component/navbar/: navbar.jsx  navbar.scss
src-mithril/component/navigation/: navigation.jsx  (+1 more)
src-mithril/config/: error.js  preferences.js  routes.js  settings.js
src-mithril/controller/: galery.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  folder.rs  galery.rs  main.rs  manga.rs  reader.rs  setting.rs  uri.rs
src-tauri/src/folder/: error.rs  mod.rs  test.rs
src-tauri/src/galery/: dir.rs  galery.rs  media.rs  mod.rs
src-tauri/src/manga/: manga_book.rs  manga_chapter.rs
(+14 files in other folders)
