[package]
name = "galery"
version = "0.0.1"
description = "Gallery manga reding app"
authors = ["you"]
license = ""
repository = ""
default-run = "galery"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.1", features = ["dialog-message", "dialog-open", "protocol-all"] }
confy="0.4.0"
mime_guess="2.0.4"
rusqlite = "0.28.0"
thiserror = "1.0.38"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
